[project]
name = "pokemon-card-pricing"
version = "0.1.0"
description = "Explainable Pokemon TCG card pricing model."
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "requests>=2.32.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]
notebook = [
    "jupyter>=1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
